// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexedFieldsTable should filter based on the query bar 1`] = `
<div>
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getFormatterForFieldNoDefault": [Function],
        "getNonScriptedFields": [Function],
      }
    }
    items={
      Array [
        Object {
          "displayName": "Elastic",
          "esTypes": Array [
            "keyword",
          ],
          "excluded": false,
          "format": "",
          "info": Array [],
          "isMapped": false,
          "kbnType": undefined,
          "name": "Elastic",
          "searchable": true,
          "type": "keyword",
        },
      ]
    }
  />
</div>
`;

exports[`IndexedFieldsTable should filter based on the type filter 1`] = `
<div>
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getFormatterForFieldNoDefault": [Function],
        "getNonScriptedFields": [Function],
      }
    }
    items={
      Array [
        Object {
          "displayName": "timestamp",
          "esTypes": Array [
            "date",
          ],
          "excluded": false,
          "format": "",
          "info": Array [],
          "isMapped": false,
          "kbnType": undefined,
          "name": "timestamp",
          "type": "date",
        },
      ]
    }
  />
</div>
`;

exports[`IndexedFieldsTable should render normally 1`] = `
<div>
  <Table
    deleteField={[Function]}
    editField={[Function]}
    indexPattern={
      Object {
        "getFormatterForFieldNoDefault": [Function],
        "getNonScriptedFields": [Function],
      }
    }
    items={
      Array [
        Object {
          "displayName": "Elastic",
          "esTypes": Array [
            "keyword",
          ],
          "excluded": false,
          "format": "",
          "info": Array [],
          "isMapped": false,
          "kbnType": undefined,
          "name": "Elastic",
          "searchable": true,
          "type": "keyword",
        },
        Object {
          "displayName": "timestamp",
          "esTypes": Array [
            "date",
          ],
          "excluded": false,
          "format": "",
          "info": Array [],
          "isMapped": false,
          "kbnType": undefined,
          "name": "timestamp",
          "type": "date",
        },
        Object {
          "displayName": "conflictingField",
          "esTypes": Array [
            "keyword",
            "long",
          ],
          "excluded": false,
          "format": "",
          "info": Array [],
          "isMapped": false,
          "kbnType": undefined,
          "name": "conflictingField",
          "type": "keyword, long",
        },
      ]
    }
  />
</div>
`;
